k8s/order_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: lgcns
spec:
  # 자원공간의 낭비를 방지하고 관리의 편의성을 제공해주는 옵션
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: order-pod
  template:
    metadata:
      labels:
        app: order-pod
    spec:
      containers:
        - name: order-container
          # ecr 경로
          image: 414901227428.dkr.ecr.us-west-1.amazonaws.com/order-khs-backend:latest
          ports:
            - containerPort: 8888
          # k8s-secret에 설정된 정보를 외부 변수로 전달하는 작업
---

apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: lgcns
spec:
  type: ClusterIP
  selector:
    app: order-pod
  ports:
    - port: 80
      targetPort: 8888
