k8s/order_redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: lgcns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-pod
  template:
    metadata:
      labels:
        app: redis-pod
    spec:
      containers:
        - name: redis-container
          image: redis
          ports:
            - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: lgcns
spec:
  type: ClusterIP
  selector:
    app: redis-pod
  ports:
    - port: 6379
      targetPort: 6379  # <--- 언더바(_)가 아니라 대문자 P를 사용해야 합니다!


# apiVersion: apps/v1

# kind: Deployment
# metadata:
#   name: redis-deployment
#   namespace: lgcns

# # Pod를 관리하는 역할.
# spec:
#   # Pod를 몇개 만들래?
#   replicas: 1
#   selector:
#     matchLabels:
#       app: redis-pod

#   # template : 참조 대상이 되는 컨테이너를 의미
#   template:
#     metadata:
#       labels:
#         app: redis-pod
#     spec:
#       containers:
#         - name: redis-container
#           image: redis
#           ports:
#             - containerPort: 6379


# ---
# # core group : pod, service, configMap, secret, namespace

# # core service setting
# apiVersion: v1
# # Pod를 만드는 과정.
# kind: Service
# metadata:
#   name: redis-service
#   namespace: lgcns

# # 도커의 이미지를 통해 컨테이너를 만드는 과정.
# spec:
#   # 클러스트 안에서 서비스를 통해서 외부 포트 번호와 연결시켜 줄 수 있도록 하겠다는 것.
#   type: ClusterIP
#   selector:
#     # app 속성이 nginx_pod.yml의 label: app: 의 이름과 맞아야 함 -> 해당 파드의 로드밸런서 서비스가 붙을 수 있게 됨.
#     app: nginx-pod
#   # pod의 포트 번호가 아니라 서비스의 포트 번호
#   ports:
#   # service port
#     - port: 6379
#   # pod inner port
#       targetPort: 6379
#     selector:
#       app: redis-pod
